files/harbor_ingresa_template.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "harbor-ingress"
  labels:
    app: "harbor"
  annotations:
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  namespace: tanzu-system-registry
spec:
  tls:
    - secretName: harbor-tls
      hosts:
        - XXX_HARBORFGDM_XXX
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: harbor-portal
              servicePort: 443
          - path: /sacha/
            backend:
              serviceName: harbor-portal
              servicePort: 443
          - path: /api/
            backend:
              serviceName: harbor-core
              servicePort: 443
          - path: /service/
            backend:
              serviceName: harbor-core
              servicePort: 443
          - path: /v2/
            backend:
              serviceName: harbor-core
              servicePort: 443
          - path: /chartrepo/
            backend:
              serviceName: harbor-core
              servicePort: 443
          - path: /c/
            backend:
              serviceName: harbor-core
              servicePort: 443
      host: XXX_HARBORFGDM_XXX
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "harbor-ingress-notary"
  labels:
    app: "harbor"
  annotations:
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  namespace: tanzu-system-registry
spec:
  tls:
    - secretName: harbor-tls
      hosts:
        - XXX_NOTARYFGDM_XXX
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: harbor-notary-server
              servicePort: 4443
      host: XXX_HARBORFGDM_XXX
